# lightgbm-tuning

./: .dockerignore  .flake8  .gitignore  COPYING  Dockerfile  README.md  best parameter dependencies better.py  best parameter dependencies good 20shuffle.py  best parameter dependencies good 5fold.py  best parameter dependencies logreg.ipynb  best parameter dependencies logreg.py  best parameter dependencies overfit.py  best parameter dependencies wide 10k.ipynb  best parameter dependencies wide 10k.py  best parameter dependencies wide 20shuffle.py  best parameter dependencies wide 5fold.py  coordinate-search.py  experiments.txt  explore all folds.ipynb  explore all folds.py  full 20 folds.py  full 5 folds.py  interactive better coordinates.py  interactive better.py  interactive good coordinates iteration.py  interactive good coordinates.py  interactive good.py  interactive logreg.py  interactive overfit true 10k.py  interactive overfit.py  interactive view 20 folds.py  interactive view single.ipynb  interactive wide 10k.py  interactive wide coordinates iteration.py  interactive wide coordinates.py  interactive wide.py  lightgbm_tuning.py  pyproject.toml  reproduce-logreg.py  reproduce.py  (+25 more)
.devcontainer/: devcontainer.json
notebooks/: best parameter dependencies better.py  best parameter dependencies good 20shuffle.py  best parameter dependencies good 5fold.py  best parameter dependencies logreg.py  best parameter dependencies overfit true 10k.py  best parameter dependencies overfit.py  best parameter dependencies wide 10k.py  best parameter dependencies wide 20shuffle.py  best parameter dependencies wide 5fold.py  full 20 folds.py  (+12 more)
(+24 files in other folders)
