[tool.poetry]
name = "lightgbm-tuning"
version = "0.1.0"
description = ""
authors = ["Anton Lebedevich <mabrek@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
bokeh = "^2.2.2"
datashader = "^0.11.1"
notebook = "^6.1.4"
jupytext = "^1.6.0"
lightgbm = "^3.0.0"
numpy = "^1.19.2"
pandas = "^1.1.3"
scikit-learn = "^0.23.2"
scipy = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
