[tool.poetry]
name = "lightgbm-tuning"
version = "0.1.0"
description = ""
authors = ["Anton Lebedevich <mabrek@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
bokeh = "^2.2.2"
datashader = "^0.11.1"
notebook = "^6.1.4"
jupytext = "^1.6.0"
lightgbm = "^3.0.0"
numpy = "^1.19.2"
pandas = "^1.1.3"
scikit-learn = "^0.23.2"
scipy = "^1.5.2"
matplotlib = "^3.3.2"
flake8 = "^3.8.4"

[tool.poetry.dev-dependencies]
py-spy = "^0.3.3"
mypy = "^0.790"
pylint = "^2.6.0"
isort = "^5.6.4"
black = "^20.8b1"
pytest = "^6.1.1"
pre-commit = "^2.7.1"
rope = "^0.18.0"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"


[tool.black]
line-length = 80
target-version = ["py38"]
include = '''
(
    lightgbm_tuning\.py$
    | /scripts/.*\.py$
)
'''

[tool.coverage.paths]
source = ["lightgbm_tuning.py"]

[tool.coverage.run]
branch = true
source = ["lightgbm_tuning"]

[tool.coverage.report]
show_missing = true